# duckdb_bigquery

./: CMakeLists.txt  README.md  extension_config.cmake  vcpkg.json
src/: CMakeLists.txt  bigquery_connection.cpp  bigquery_execute.cpp  bigquery_extension.cpp  bigquery_query.cpp  bigquery_scanner.cpp  bigquery_storage.cpp  bigquery_storage_scanner.cpp  bigquery_utils.cpp
src/include/: bigquery_connection.hpp  bigquery_result.hpp  bigquery_scanner.hpp  bigquery_storage_scanner.hpp  bigquery_utils.hpp
src/include/storage/: bigquery_catalog.hpp  bigquery_optimizer.hpp  bigquery_schema_entry.hpp  bigquery_table_entry.hpp  bigquery_transaction.hpp
src/storage/: CMakeLists.txt  bigquery_catalog.cpp  bigquery_catalog_set.cpp  bigquery_execute_query.cpp  bigquery_index_set.cpp  bigquery_insert.cpp  bigquery_optimizer.cpp  bigquery_result.cpp  bigquery_schema_entry.cpp  bigquery_schema_set.cpp  bigquery_table_entry.cpp  bigquery_table_set.cpp  bigquery_transaction.cpp  bigquery_transaction_manager.cpp
